force-app/main/default/objects/PDLM__Assembly__c/PDLM__Assembly__c.object-meta.xml
<CustomObject>
    <description>Joins Items and Item Revisions into a hierarchical bill of materials (BOM), holds Item quantity and reference designators</description>
    <label>Assembly</label>
    <nameField>
        <label>Assembly Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assemblies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>