force-app/main/default/objects/PDLM__Assembly__c/fields/PDLM__Category__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Category__c</fullName>
    <description>Parent Item category name</description>
    <formula>PDLM__Item_Revision__r.PDLM__Master_Item__r.PDLM__Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Category</label>
    <type>Text</type>
</CustomField>