force-app/main/default/objects/PDLM__Assembly__c/fields/PDLM__Find_Number__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Find_Number__c</fullName>
    <description>Used to order the BOM in a preferred manner</description>
    <label>Find #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>