force-app/main/default/objects/PDLM__Assembly__c/fields/PDLM__Has_Errors__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Has_Errors__c</fullName>
    <formula>PDLM__Error_Codes__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Errors</label>
    <type>Checkbox</type>
</CustomField>