force-app/main/default/objects/PDLM__Assembly__c/fields/PDLM__Is_Substitute__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Is_Substitute__c</fullName>
    <formula>PDLM__Substitute_Parent__c &lt;&gt; NULL &amp;&amp;  PDLM__Substitute_Parent__r.PDLM__Item__c &lt;&gt; NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is Substitute</inlineHelpText>
    <label>Is Substitute</label>
    <type>Checkbox</type>
</CustomField>