force-app/main/default/objects/PDLM__Assembly__c/fields/PDLM__Item_Description__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Item_Description__c</fullName>
    <formula>PDLM__Item__r.PDLM__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Description</label>
    <type>Text</type>
</CustomField>