force-app/main/default/objects/PDLM__Assembly__c/fields/PDLM__Item_Revision__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Item_Revision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Showing the current or latest revision of the item in this BOM</inlineHelpText>
    <label>Parent Item (Revision)</label>
    <referenceTo>PDLM__Item_Revision__c</referenceTo>
    <relationshipLabel>BOM</relationshipLabel>
    <relationshipName>BOM</relationshipName>
    <type>Lookup</type>
</CustomField>