force-app/main/default/objects/PDLM__Assembly__c/fields/PDLM__Notes__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Notes__c</fullName>
    <description>Provide details on this part associated to the assembly.</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>