force-app/main/default/objects/PDLM__Assembly__c/fields/PDLM__ParentUniqueGridId__c.field-meta.xml
<CustomField>
    <fullName>PDLM__ParentUniqueGridId__c</fullName>
    <description>Text to determine heirarchy of multilevel bom.  Should match UniqueGridId of the immediate parent item that is generated at run time.</description>
    <label>ParentUniqueGridId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>