force-app/main/default/objects/PDLM__Assembly__c/fields/PDLM__Quoted__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Quoted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Excludes BOM costs from this item in rollups.</description>
    <inlineHelpText>Excludes BOM costs from this item in rollups.</inlineHelpText>
    <label>Quoted</label>
    <type>Checkbox</type>
</CustomField>