force-app/main/default/objects/PDLM__Assembly__c/listViews/PDLM__All.listView-meta.xml
<ListView>
    <fullName>PDLM__All</fullName>
    <columns>NAME</columns>
    <columns>PDLM__Item_Revision__c</columns>
    <columns>PDLM__Quantity__c</columns>
    <columns>PDLM__Item__c</columns>
    <columns>PDLM__Type__c</columns>
    <columns>PDLM__Designators__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>